--- a/index.html
+++ b/index.html
@@ -35,26 +35,35 @@
   </style>
 </head>
 <body>
-  <div id="terminal"></div>
+  <div id="terminal">
+    <pre>
+             __                          __             __                          
+       /\ \                        /\ \__         /\ \                         
+ _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
+/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
+\ \ \L\ \\ \ \ \ \ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\`\\/_/  /_\ \ \_\ \  
+ \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
+  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
+   \ \_\                                                                 /\___/
+    \/_/                                                                 \/__/ 
+    </pre>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     const term = document.getElementById('terminal');
-    const delay = ms => new Promise(r => setTimeout(r, ms));
-
-    const lines = [
-      '[phantekzy@archlinux ~]$ fastfetch',
-      `
+    const fastfetchCmd = '[phantekzy@archlinux ~]$ fastfetch';
+    const fastfetchArt = `
               -\`                   phantekzy@archlinux
                   .o+\`                  -------------------------------
                  \`ooo/                  Full Name : Maini Lotfi Abdelkader
                 \`+oooo:                 Alias     : phantekzy
-               \`+oooooo:                Location  : Bir Mourad Ra\u00efs, Algiers, Algeria
+               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
                -+oooooo+:               Age       : 28 (born 1996-09-08)
              \`/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
             \`/++++/+++++++:             Status    : Currently exploring ArchLinux
            \`/++++++++++++++:            WM        : Hyprland 
-          \`/+++ooooooooooooo/\\`         Shell     : Zsh + Starship
+          \`/+++ooooooooooooo/\\\`         Shell     : Zsh + Starship
          ./ooosssso++osssssso+\`         Editor    : Neovim (Lua)
         .oossssso-\`\`\`\`/ossssss+\`        Terminal  : Alacritty
        -osssssso.      :ssssssso.       Browser   : Firefox / W3M
@@ -62,68 +71,97 @@
      /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
    \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
   \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
- \`++:.                           \`-/+/  
- .\n`,
-      '[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/',
-      '[phantekzy@archlinux dev_stack]$ ls -la',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 HTML5',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 CSS3',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 JavaScript',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 PHP',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 Node.js',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 React',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 MySQL',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 TailwindCSS',
-      '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 MongoDB',
-      '',
-      '[phantekzy@archlinux ~]$ cd ~/certifications/',
-      '[phantekzy@archlinux certifications]$ ls',
-      'freecodecamp-responsive-web-design.pdf',
-      'freecodecamp-javascript-algorithms.pdf',
-      'meta-frontend-developer.pdf',
-      '',
-      '[phantekzy@archlinux ~]$ cd ~/projects/',
-      '[phantekzy@archlinux projects]$ ls',
-      'portfolio-terminal.html',
-      'dark-souls-blog-site/',
-      'cybersec-toolkit/',
-      '',
+ \`++:.                           \`-/+/
+ .\`    
+`;
+
+    const postFilesCommands = [
       '[phantekzy@archlinux ~]$ cd ~/socials/',
+      '',
+
       '[phantekzy@archlinux socials]$ curl -s linkedin.com/in/maini-lotfi | grep -i "Maini Lotfi"',
       '[ OK ] Loaded LinkedIn profile',
       '',
+
       '[phantekzy@archlinux socials]$ curl -s x.com/mainilotfi | grep -i "Maini Lotfi"',
       '[ OK ] X/Twitter feed found',
       '',
+
       '[phantekzy@archlinux socials]$ curl -s youtube.com/@phantekzy | grep -i "phantekzy"',
       '[ OK ] YouTube channel detected',
       '',
+
       '[phantekzy@archlinux socials]$ mail -s "Contact" mainilotfi@gmail.com',
       '[ INFO ] Opening email client...',
       '',
+
       '[phantekzy@archlinux ~]$ uname -a',
       'Linux archlinux 6.9.6-arch1-1 x86_64 GNU/Linux',
       '',
+
       '[phantekzy@archlinux ~]$ exit',
       'logout',
       '',
+
       '███████████ Process terminated successfully.',
       '',
+
       'Thank you for visiting PHANTEKZY\'s Arch terminal'
     ];
 
     async function run() {
-      for (let line of lines) {
-        if (line.trim() === '') {
-          term.appendChild(document.createElement('br'));
+      let d = document.createElement('div'); term.appendChild(d);
+      await new Promise(r => new Typed(d, { strings: [fastfetchCmd], typeSpeed: 20, showCursor: false, onComplete: r }));
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 200));
+
+      term.insertAdjacentHTML('beforeend', `<pre>${fastfetchArt}</pre>`);
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 200));
+
+      d = document.createElement('div'); term.appendChild(d);
+      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/'], typeSpeed: 20, showCursor: false, onComplete: r }));
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 100));
+
+      d = document.createElement('div'); term.appendChild(d);
+      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux dev_stack]$ ls -la'], typeSpeed: 20, showCursor: false, onComplete: r }));
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 100));
+
+      const files = [
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 HTML5',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 CSS3',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 JavaScript',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 PHP',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 Node.js',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 React',
+        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 MySQL'
+      ];
+      term.insertAdjacentHTML('beforeend', `<pre>${files.join('\n')}</pre>`);
+      term.scrollTop = term.scrollHeight;
+      await new Promise(r => setTimeout(r, 200));
+
+      for (let cmd of postFilesCommands) {
+        if (cmd.trim() === '') {
+          const br = document.createElement('br');
+          term.appendChild(br);
         } else {
-          const div = document.createElement('div');
-          term.appendChild(div);
-          await new Promise(r => new Typed(div, { strings: [line], typeSpeed: 20, showCursor: false, onComplete: r }));
+          const d = document.createElement('div');
+          term.appendChild(d);
+          await new Promise(r =>
+            new Typed(d, {
+              strings: [cmd],
+              typeSpeed: 20,
+              showCursor: false,
+              onComplete: r
+            })
+          );
         }
         term.scrollTop = term.scrollHeight;
-        await delay(100);
+        await new Promise(r => setTimeout(r, 100));
       }
+
       const cursor = document.createElement('span');
       cursor.className = 'cursor';
       term.lastChild.appendChild(cursor);
