--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
   <title>phantekzy | Terminal Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet"/>
   <style>
-    html, body { height: 100%; margin: 0; padding: 0; }
-    body {
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: 'Fira Code', monospace;
       background: #0d0d0d;
       color: #00ff00;
-      font-family: 'Fira Code', monospace;
     }
     #terminal {
       width: 100%;
       height: 100%;
       padding: 30px;
       background: #111;
-      white-space: pre;
+      white-space: pre-wrap;
       overflow-y: auto;
+    }
+    a {
+      color: #00ff00;
+      text-decoration: underline;
     }
     .cursor {
       display: inline-block;
@@ -35,132 +41,77 @@
   </style>
 </head>
 <body>
-  <div id="terminal">
-    <pre>
-             __                          __             __                          
-       /\ \                        /\ \__         /\ \                         
- _____ \ \ \___       __       ___ \ \ ,_\     __ \ \ \/'\   ____    __  __    
-/\ '__`\\ \  _ `\   /'__`\   /' _ `\\ \ \/   /'__`\\ \ , <  /\_ ,`\ /\ \/\ \   
-\ \ \L\ \\ \ \ \ \ /\ \L\.\_ /\ \/\ \\ \ \_ /\  __/ \ \ \\`\\/_/  /_\ \ \_\ \  
- \ \ ,__/ \ \_\ \_\\ \__/.\_\\ \_\ \_\\ \__\\ \____\ \ \_\ \_\/\____\\/`____ \ 
-  \ \ \/   \/_/\/_/ \/__/\/_/ \/_/\/_/ \/__/ \/____/  \/_/\/_/\/____/ `/___/> \
-   \ \_\                                                                 /\___/
-    \/_/                                                                 \/__/ 
-    </pre>
-  </div>
+  <div id="terminal"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     const term = document.getElementById('terminal');
-    const fastfetchCmd = '[phantekzy@archlinux ~]$ fastfetch';
-    const fastfetchArt = `
-              -\`                   phantekzy@archlinux
-                  .o+\`                  -------------------------------
+    const sleep = ms => new Promise(r => setTimeout(r, ms));
+
+    async function typeLine(text, delay = 20) {
+      const line = document.createElement('div');
+      term.appendChild(line);
+      await new Promise(r => new Typed(line, {
+        strings: [text],
+        typeSpeed: delay,
+        showCursor: false,
+        onComplete: r
+      }));
+      term.scrollTop = term.scrollHeight;
+      await sleep(100);
+    }
+
+    async function insertBlock(text) {
+      const block = document.createElement('pre');
+      block.textContent = text;
+      term.appendChild(block);
+      term.scrollTop = term.scrollHeight;
+      await sleep(200);
+    }
+
+    async function run() {
+      await typeLine('[phantekzy@archlinux ~]$ fastfetch');
+
+      await insertBlock(`
+              -` + "`" + `                   phantekzy@archlinux
+                  .o+` + "`" + `                  -------------------------------
                  \`ooo/                  Full Name : Maini Lotfi Abdelkader
                 \`+oooo:                 Alias     : phantekzy
-               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers, Algeria
+               \`+oooooo:                Location  : Bir Mourad Raïs, Algiers
                -+oooooo+:               Age       : 28 (born 1996-09-08)
              \`/:-:++oooo+:              Role      : Elden Lord + Web Dev + CyberSec
-            \`/++++/+++++++:             Status    : Currently exploring ArchLinux
+            \`/++++/+++++++:             Status    : Exploring ArchLinux
            \`/++++++++++++++:            WM        : Hyprland 
-          \`/+++ooooooooooooo/\\\`         Shell     : Zsh + Starship
-         ./ooosssso++osssssso+\`         Editor    : Neovim (Lua)
-        .oossssso-\`\`\`\`/ossssss+\`        Terminal  : Alacritty
+          \`/+++ooooooooooooo/\         Shell     : Zsh + Starship
+         ./ooosssso++osssssso+         Editor    : Neovim (Lua)
+        .oossssso-\`\`\`\`/ossssss+        Terminal  : Alacritty
        -osssssso.      :ssssssso.       Browser   : Firefox / W3M
       :osssssss/        osssso+++.      Theme     : NerdFont + Gruvbox Dark
      /ossssssss/        +ssssooo/-      Hobby     : AI, Linux, low-level code
-   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering for Code 
-  \`+sso+:-\`                 \`.-/+oso:   Motto     : "Learn. Build. Play Dark Souls. Repeat."
+   \`/ossssso+/:-        -:/+osssso+-    Fun Fact  : Dropped Civil Engineering
+  \`+sso+:-\`                 \`.-/+oso:   Motto     : Learn. Build. Repeat.
  \`++:.                           \`-/+/
- .\`    
-`;
+ .`);
 
-    const postFilesCommands = [
-      '[phantekzy@archlinux ~]$ cd ~/socials/',
-      '',
+      await typeLine('[phantekzy@archlinux ~]$ cd ~/skills/');
+      await typeLine('[phantekzy@archlinux skills]$ ls -la');
+      await insertBlock(`- HTML5\n- CSS3\n- JavaScript\n- PHP\n- Node.js\n- React\n- MySQL`);
 
-      '[phantekzy@archlinux socials]$ curl -s linkedin.com/in/maini-lotfi | grep -i "Maini Lotfi"',
-      '[ OK ] Loaded LinkedIn profile',
-      '',
+      await typeLine('[phantekzy@archlinux ~]$ cd ~/projects/');
+      await typeLine('[phantekzy@archlinux projects]$ ls -la');
+      await insertBlock(`- dark-souls-themed-blog\n- arch-config-installer\n- react-chat-terminal-ui`);
 
-      '[phantekzy@archlinux socials]$ curl -s x.com/mainilotfi | grep -i "Maini Lotfi"',
-      '[ OK ] X/Twitter feed found',
-      '',
+      await typeLine('[phantekzy@archlinux ~]$ cd ~/socials/');
+      await insertBlock('[ OK ] LinkedIn → <a href="https://linkedin.com/in/maini-lotfi" target="_blank">linkedin.com/in/maini-lotfi</a>');
+      await insertBlock('[ OK ] Twitter/X → <a href="https://x.com/mainilotfi" target="_blank">x.com/mainilotfi</a>');
+      await insertBlock('[ OK ] GitHub → <a href="https://github.com/phantekzy" target="_blank">github.com/phantekzy</a>');
+      await insertBlock('[ OK ] YouTube → <a href="https://youtube.com/@phantekzy" target="_blank">youtube.com/@phantekzy</a>');
 
-      '[phantekzy@archlinux socials]$ curl -s youtube.com/@phantekzy | grep -i "phantekzy"',
-      '[ OK ] YouTube channel detected',
-      '',
+      await typeLine('[phantekzy@archlinux ~]$ echo "Contact me at mainilotfi@gmail.com"');
+      await insertBlock('📬 Email: mainilotfi@gmail.com');
 
-      '[phantekzy@archlinux socials]$ mail -s "Contact" mainilotfi@gmail.com',
-      '[ INFO ] Opening email client...',
-      '',
-
-      '[phantekzy@archlinux ~]$ uname -a',
-      'Linux archlinux 6.9.6-arch1-1 x86_64 GNU/Linux',
-      '',
-
-      '[phantekzy@archlinux ~]$ exit',
-      'logout',
-      '',
-
-      '███████████ Process terminated successfully.',
-      '',
-
-      'Thank you for visiting PHANTEKZY\'s Arch terminal'
-    ];
-
-    async function run() {
-      let d = document.createElement('div'); term.appendChild(d);
-      await new Promise(r => new Typed(d, { strings: [fastfetchCmd], typeSpeed: 20, showCursor: false, onComplete: r }));
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 200));
-
-      term.insertAdjacentHTML('beforeend', `<pre>${fastfetchArt}</pre>`);
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 200));
-
-      d = document.createElement('div'); term.appendChild(d);
-      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux ~]$ cd ~/skills/dev_stack/'], typeSpeed: 20, showCursor: false, onComplete: r }));
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 100));
-
-      d = document.createElement('div'); term.appendChild(d);
-      await new Promise(r => new Typed(d, { strings: ['[phantekzy@archlinux dev_stack]$ ls -la'], typeSpeed: 20, showCursor: false, onComplete: r }));
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 100));
-
-      const files = [
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 HTML5',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 CSS3',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 JavaScript',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 PHP',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 Node.js',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 React',
-        '-rw-r--r-- 1 phantekzy users   13 Jul 01 20:25 MySQL'
-      ];
-      term.insertAdjacentHTML('beforeend', `<pre>${files.join('\n')}</pre>`);
-      term.scrollTop = term.scrollHeight;
-      await new Promise(r => setTimeout(r, 200));
-
-      for (let cmd of postFilesCommands) {
-        if (cmd.trim() === '') {
-          const br = document.createElement('br');
-          term.appendChild(br);
-        } else {
-          const d = document.createElement('div');
-          term.appendChild(d);
-          await new Promise(r =>
-            new Typed(d, {
-              strings: [cmd],
-              typeSpeed: 20,
-              showCursor: false,
-              onComplete: r
-            })
-          );
-        }
-        term.scrollTop = term.scrollHeight;
-        await new Promise(r => setTimeout(r, 100));
-      }
+      await typeLine('[phantekzy@archlinux ~]$ exit');
+      await insertBlock('logout\n\n███████████ Process terminated successfully.\n\nThank you for visiting PHANTEKZY\'s Arch terminal. See you soon!');
 
       const cursor = document.createElement('span');
       cursor.className = 'cursor';
